add more visualizations

--- a/tutorial/06-kg-network-analysis.ipynb
+++ b/tutorial/06-kg-network-analysis.ipynb
@@ -117,6 +117,8 @@
     "files = [\n",
     "    \"label\",\n",
     "    \"item\",\n",
+    "    \"time\",\n",
+    "    \"quantity\"\n",
     "]\n",
     "ck = ConfigureKGTK(files, input_files_url=input_files_url)\n",
     "ck.configure_kgtk(input_graph_path=input_path,\n",
@@ -134,18 +136,20 @@
      "output_type": "stream",
      "text": [
       "kgtk: kgtk\n",
-      "TEMP: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis\n",
-      "KGTK_OPTION_DEBUG: false\n",
-      "STORE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
-      "OUT: /tmp/projects/tutorial-network-analysis\n",
-      "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\n",
-      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
-      "GRAPH: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input\n",
       "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
-      "kypher: kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "OUT: /tmp/projects/tutorial-network-analysis\n",
+      "KGTK_OPTION_DEBUG: false\n",
       "EXAMPLES_DIR: /Users/amandeep/Github/kgtk-notebooks/examples\n",
+      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
+      "kypher: kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "STORE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "TEMP: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis\n",
+      "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\n",
+      "GRAPH: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input\n",
       "label: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\n",
-      "item: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.wikibase-item.tsv.gz\n"
+      "item: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.wikibase-item.tsv.gz\n",
+      "time: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.time.tsv.gz\n",
+      "quantity: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.quantity.tsv.gz\n"
      ]
     }
    ],
@@ -169,13 +173,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\" --as label  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.wikibase-item.tsv.gz\" --as item  --limit 3\n",
+      "kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\" --as label  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.wikibase-item.tsv.gz\" --as item  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.time.tsv.gz\" --as time  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.quantity.tsv.gz\" --as quantity  --limit 3\n",
       "node1\tlabel\tnode2\tid\n",
       "P10\tlabel\t'video'@en\tP10-label-en\n",
       "P1000\tlabel\t'record held'@en\tP1000-label-en\n",
       "P1001\tlabel\t'applies to jurisdiction'@en\tP1001-label-en\n",
-      "CPU times: user 5.44 ms, sys: 11.7 ms, total: 17.1 ms\n",
-      "Wall time: 3.9 s\n"
+      "CPU times: user 3.16 ms, sys: 10.4 ms, total: 13.6 ms\n",
+      "Wall time: 4.74 s\n"
      ]
     }
    ],
@@ -205,8 +209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.88 ms, sys: 12.1 ms, total: 18.9 ms\n",
-      "Wall time: 11.5 s\n"
+      "CPU times: user 6.97 ms, sys: 12.3 ms, total: 19.3 ms\n",
+      "Wall time: 10.6 s\n"
      ]
     }
    ],
@@ -384,8 +388,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 70.6 ms, sys: 23.8 ms, total: 94.4 ms\n",
-      "Wall time: 5.69 s\n"
+      "CPU times: user 67.8 ms, sys: 21.8 ms, total: 89.6 ms\n",
+      "Wall time: 4.8 s\n"
      ]
     },
     {
@@ -560,8 +564,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.88 ms, sys: 11.4 ms, total: 18.3 ms\n",
-      "Wall time: 3.68 s\n"
+      "CPU times: user 6.53 ms, sys: 11 ms, total: 17.5 ms\n",
+      "Wall time: 3.41 s\n"
      ]
     },
     {
@@ -749,8 +753,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.46 ms, sys: 9.42 ms, total: 12.9 ms\n",
-      "Wall time: 2.12 s\n"
+      "CPU times: user 3.95 ms, sys: 9.76 ms, total: 13.7 ms\n",
+      "Wall time: 1.95 s\n"
      ]
     }
    ],
@@ -976,8 +980,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.44 ms, sys: 19 ms, total: 27.4 ms\n",
-      "Wall time: 3.98 s\n"
+      "CPU times: user 8.6 ms, sys: 19.1 ms, total: 27.7 ms\n",
+      "Wall time: 4.58 s\n"
      ]
     },
     {
@@ -2229,7 +2233,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the [kgtk visualize-graph](https://kgtk.readthedocs.io/en/latest/analysis/visualize-graph) command"
+    "Run the [kgtk visualize-graph](https://kgtk.readthedocs.io/en/latest/analysis/visualize-graph) command\n",
+    "\n",
+    "The following command will draw the graph as:\n",
+    "\n",
+    "- an edge exists between two movie nodes if they have `1` or more common actors\n",
+    "- edge width between two movies is proportionate to number of common actors\n",
+    "- movie node color represents the genre of the movie"
    ]
   },
   {
@@ -2357,12 +2367,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the [kgtk visualize-graph](https://kgtk.readthedocs.io/en/latest/analysis/visualize-graph) command"
+    "Run the [kgtk visualize-graph](https://kgtk.readthedocs.io/en/latest/analysis/visualize-graph) command\n",
+    "\n",
+    "The following command will draw the graph as:\n",
+    "\n",
+    "- an edge exists between two movie nodes if they have `3` or more common actors\n",
+    "- edge width between two movies is proportionate to number of common actors\n",
+    "- movie node color represents the genre of the movie"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2383,11 +2399,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "!open $OUT/movies.gt3.common_actors.genre.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize Movies according to Awards won"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kgtk(\"\"\"\n",
+    "    query -i $TEMP/movies.common_actors.count.1.tsv.gz\n",
+    "        --match 'common_actor: (film1)-[eid {P1114: count}]->(film2)'\n",
+    "        --where 'cast(count, int) > 2'\n",
+    "        --return 'film1 as node1, \"Pcommon_actor\" as label, film2 as node2, count as P1114, eid.actors as actors'\n",
+    "    -o $TEMP/movies.common_actors.count.4.tsv.gz\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kgtk(f\"\"\"query -i $TEMP/movies.common_actors.count.4.tsv.gz\n",
+    "         --match 'common_actor: (n1)-[]->()'\n",
+    "         --return 'distinct n1 as node1'\n",
+    "         -o $TEMP/movies.common_actors.node41.tsv\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kgtk(f\"\"\"query -i $TEMP/movies.common_actors.count.4.tsv.gz\n",
+    "         --match 'common_actor: ()-[]->(n2)'\n",
+    "         --return 'distinct n2 as node1'\n",
+    "         -o $TEMP/movies.common_actors.node42.tsv\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kgtk(f\"\"\"cat -i $TEMP/movies.common_actors.node41.tsv \n",
+    "             -i $TEMP/movies.common_actors.node42.tsv \n",
+    "             --mode NONE  \n",
+    "             -o $TEMP/movies.common_actors.node.4.tsv\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kgtk(f\"\"\"query -i $TEMP/movies.common_actors.node.4.tsv -i label -i item\n",
+    "         --match 'common_actor: (n1)-[]->(),\n",
+    "                 label: (n1)-[]->(n1_label),\n",
+    "                 item: (n1)-[:P161]->(actor),\n",
+    "                 label: (actor)-[]->(actor_label)'\n",
+    "        --opt    'item: (n1)-[:P166]->(award),\n",
+    "                 label: (award)-[]->(award_label)'\n",
+    "         --return 'distinct n1 as id, \n",
+    "                   n1_label as label,  \n",
+    "                   count(distinct award) as award_count,\n",
+    "                   group_concat(distinct kgtk_lqstring_text(award_label)) as awards,\n",
+    "                   group_concat(distinct kgtk_lqstring_text(actor_label)) as actors,\n",
+    "                   printf(\"%s<BR>Awards (%s): %s<BR>Cast: %s\", kgtk_lqstring_text(n1_label), \n",
+    "                   count(distinct award), group_concat(distinct kgtk_lqstring_text(award_label)), \n",
+    "                   group_concat(distinct kgtk_lqstring_text(actor_label))) as tooltip'\n",
+    "         -o $TEMP/movies.node.file.4.tsv\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the [kgtk visualize-graph](https://kgtk.readthedocs.io/en/latest/analysis/visualize-graph) command\n",
+    "\n",
+    "The following command will draw the graph as:\n",
+    "\n",
+    "- an edge exists between two movie nodes if they have `3` or more common actors\n",
+    "- edge width between two movies is proportionate to number of common actors\n",
+    "- movie node color represents the award(s) a movie has won\n",
+    "- size of the movie node depends on the number of awards it has won"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kgtk(\"\"\"visualize-graph \n",
+    "        -i $TEMP/movies.common_actors.count.4.tsv.gz\n",
+    "        --node-file $TEMP/movies.node.file.4.tsv\n",
+    "        --edge-width-column P1114\n",
+    "        --edge-width-minimum 0.5\n",
+    "        --edge-width-maximum 1\n",
+    "        --edge-color-default '#888888'\n",
+    "        --edge-width-scale linear\n",
+    "        --node-color-column awards\n",
+    "        --node-color-style categorical\n",
+    "        --tooltip-column tooltip\n",
+    "        --show-text above\n",
+    "        --node-size-column award_count\n",
+    "        --node-size-scale log\n",
+    "        --node-size-minimum 5\n",
+    "        --node-size-maximum 10\n",
+    "        -o $OUT/movies.common_actors.awards.html\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!open $OUT/movies.common_actors.awards.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Movies](https://raw.githubusercontent.com/usc-isi-i2/kgtk-notebooks/main/tutorial/assets/movies.award.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize Movies according to Publication Date and Box Office Collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kgtk(f\"\"\"query -i $TEMP/movies.common_actors.node.4.tsv -i label -i time -i quantity\n",
+    "         --match 'common_actor: (n1)-[]->(),\n",
+    "                 label: (n1)-[]->(n1_label)'\n",
+    "        --opt    'quantity: (n1)-[:P2142]->(box_office),\n",
+    "                  time: (n1)-[:P577]->(publication_date)'\n",
+    "         --return 'distinct n1 as id, \n",
+    "                   n1_label as label,  \n",
+    "                   max(kgtk_quantity_number(box_office)) as bo_collection,\n",
+    "                   max(distinct(kgtk_date_year(publication_date))) as publication_year,\n",
+    "                   printf(\"%s (%s)<BR>Publication Year: %s<BR>Box Office: %s\", kgtk_lqstring_text(n1_label), n1,\n",
+    "                   max(distinct(kgtk_date_year(publication_date))),\n",
+    "                   max(kgtk_quantity_number(box_office))) as tooltip'\n",
+    "         -o $TEMP/movies.node.file.5.tsv\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the [kgtk visualize-graph](https://kgtk.readthedocs.io/en/latest/analysis/visualize-graph) command\n",
+    "\n",
+    "The following command will draw the graph as:\n",
+    "\n",
+    "- an edge exists between two movie nodes if they have `3` or more common actors\n",
+    "- edge width between two movies is proportionate to number of common actors\n",
+    "- movie node color represents the year of publication\n",
+    "- size of the movie node depends on the box office collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kgtk(\"\"\"visualize-graph \n",
+    "        -i $TEMP/movies.common_actors.count.4.tsv.gz\n",
+    "        --node-file $TEMP/movies.node.file.5.tsv\n",
+    "        --edge-width-column P1114\n",
+    "        --edge-width-minimum 0.5\n",
+    "        --edge-width-maximum 1\n",
+    "        --edge-color-default '#888888'\n",
+    "        --edge-width-scale linear\n",
+    "        --node-color-column publication_year\n",
+    "        --node-color-style rainbow\n",
+    "        --tooltip-column tooltip\n",
+    "        --show-text above\n",
+    "        --node-size-column bo_collection\n",
+    "        --node-size-scale log\n",
+    "        --node-size-minimum 5\n",
+    "        --node-size-maximum 10\n",
+    "        -o $OUT/movies.common_actors.year.box_office.html\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Movies](https://raw.githubusercontent.com/usc-isi-i2/kgtk-notebooks/main/tutorial/assets/movies.year.boxoffice.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!open $OUT/movies.common_actors.year.box_office.html"
    ]
   },
   {
