--- a/tutorial/06-kg-network-analysis.ipynb
+++ b/tutorial/06-kg-network-analysis.ipynb
@@ -135,17 +135,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk: kgtk\n",
-      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
-      "OUT: /tmp/projects/tutorial-network-analysis\n",
-      "KGTK_OPTION_DEBUG: false\n",
-      "EXAMPLES_DIR: /Users/amandeep/Github/kgtk-notebooks/examples\n",
-      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
-      "kypher: kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
-      "STORE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
-      "TEMP: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis\n",
       "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\n",
+      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "EXAMPLES_DIR: /Users/amandeep/Github/kgtk-notebooks/examples\n",
+      "STORE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "KGTK_OPTION_DEBUG: false\n",
+      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
       "GRAPH: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input\n",
+      "kgtk: kgtk\n",
+      "OUT: /tmp/projects/tutorial-network-analysis\n",
+      "TEMP: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis\n",
+      "kypher: kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
       "label: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\n",
       "item: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.wikibase-item.tsv.gz\n",
       "time: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.time.tsv.gz\n",
@@ -178,8 +178,8 @@
       "P10\tlabel\t'video'@en\tP10-label-en\n",
       "P1000\tlabel\t'record held'@en\tP1000-label-en\n",
       "P1001\tlabel\t'applies to jurisdiction'@en\tP1001-label-en\n",
-      "CPU times: user 3.16 ms, sys: 10.4 ms, total: 13.6 ms\n",
-      "Wall time: 4.74 s\n"
+      "CPU times: user 5.83 ms, sys: 11.9 ms, total: 17.7 ms\n",
+      "Wall time: 4.92 s\n"
      ]
     }
    ],
@@ -209,8 +209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.97 ms, sys: 12.3 ms, total: 19.3 ms\n",
-      "Wall time: 10.6 s\n"
+      "CPU times: user 6.73 ms, sys: 12.2 ms, total: 18.9 ms\n",
+      "Wall time: 11.4 s\n"
      ]
     }
    ],
@@ -388,8 +388,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 67.8 ms, sys: 21.8 ms, total: 89.6 ms\n",
-      "Wall time: 4.8 s\n"
+      "CPU times: user 79 ms, sys: 24.4 ms, total: 103 ms\n",
+      "Wall time: 4.94 s\n"
      ]
     },
     {
@@ -564,8 +564,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.53 ms, sys: 11 ms, total: 17.5 ms\n",
-      "Wall time: 3.41 s\n"
+      "CPU times: user 6.51 ms, sys: 11.5 ms, total: 18 ms\n",
+      "Wall time: 3.8 s\n"
      ]
     },
     {
@@ -753,8 +753,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.95 ms, sys: 9.76 ms, total: 13.7 ms\n",
-      "Wall time: 1.95 s\n"
+      "CPU times: user 3.82 ms, sys: 10.8 ms, total: 14.6 ms\n",
+      "Wall time: 2.17 s\n"
      ]
     }
    ],
@@ -980,8 +980,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.6 ms, sys: 19.1 ms, total: 27.7 ms\n",
-      "Wall time: 4.58 s\n"
+      "CPU times: user 8.55 ms, sys: 19.5 ms, total: 28.1 ms\n",
+      "Wall time: 4.29 s\n"
      ]
     },
     {
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {
     "tags": []
    },
@@ -1667,7 +1667,7 @@
     "         --opt   'item: (n1)-[:P27]->(country)'\n",
     "         --opt   'label: (country)-[]->(c_label)'\n",
     "         --return 'distinct n1 as id, n1_label as label,  group_concat(distinct c_label) as country_label,\n",
-    "         printf(\"Citizenship: %s\", group_concat(distinct kgtk_lqstring_text(c_label))) as tooltip'\n",
+    "         printf(\"Citizenship: %s\", replace(group_concat(distinct kgtk_lqstring_text(c_label)), \",\", \", \")) as tooltip'\n",
     "         -o $TEMP/arnold.family.node.file.tsv\n",
     "\"\"\")"
    ]
@@ -1678,12 +1678,17 @@
     "tags": []
    },
    "source": [
-    "Run the [kgtk visualize-graph](https://kgtk.readthedocs.io/en/latest/analysis/visualize-graph) command"
+    "Run the [kgtk visualize-graph](https://kgtk.readthedocs.io/en/latest/analysis/visualize-graph) command\n",
+    "\n",
+    "The following command will draw the graph as:\n",
+    "\n",
+    "- Node color represents the country of citizenship.\n",
+    "- Edge label specifies the relation between nodes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -1710,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1758,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1945,7 +1950,7 @@
        "9               'Bite the Bullet'@en  'Gene Hackman'@en  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1956,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1979,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2158,7 +2163,7 @@
        "9  'The Conversation'@en                        'Hawaii'@en  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2169,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2182,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2195,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2208,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2224,7 +2229,7 @@
     "                   group_concat(distinct kgtk_lqstring_text(g_label)) as genre, \n",
     "                   group_concat(distinct kgtk_lqstring_text(actor_label)) as actors,\n",
     "                   printf(\"%s<BR>Genre: %s<BR>Cast: %s\", kgtk_lqstring_text(n1_label), \n",
-    "                   group_concat(distinct kgtk_lqstring_text(g_label)), group_concat(distinct kgtk_lqstring_text(actor_label))) as tooltip'\n",
+    "                   replace(group_concat(distinct kgtk_lqstring_text(g_label)), \",\", \", \"), replace(group_concat(distinct kgtk_lqstring_text(actor_label)), \",\", \", \")) as tooltip'\n",
     "         -o $TEMP/movies.node.file.tsv\n",
     "\"\"\")"
    ]
@@ -2244,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2272,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2288,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2303,7 +2308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2329,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2342,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2358,7 +2363,8 @@
     "                   group_concat(distinct kgtk_lqstring_text(g_label)) as genre, \n",
     "                   group_concat(distinct kgtk_lqstring_text(actor_label)) as actors,\n",
     "                   printf(\"%s<BR>Genre: %s<BR>Cast: %s\", kgtk_lqstring_text(n1_label), \n",
-    "                   group_concat(distinct kgtk_lqstring_text(g_label)), group_concat(distinct kgtk_lqstring_text(actor_label))) as tooltip'\n",
+    "                   replace(group_concat(distinct kgtk_lqstring_text(g_label)), \",\", \", \"), \n",
+    "                   replace(group_concat(distinct kgtk_lqstring_text(actor_label)), \",\", \", \")) as tooltip'\n",
     "         -o $TEMP/movies.node.file.2.tsv\n",
     "\"\"\")"
    ]
@@ -2378,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2399,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2430,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2443,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2456,7 +2462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2469,7 +2475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2486,8 +2492,9 @@
     "                   group_concat(distinct kgtk_lqstring_text(award_label)) as awards,\n",
     "                   group_concat(distinct kgtk_lqstring_text(actor_label)) as actors,\n",
     "                   printf(\"%s<BR>Awards (%s): %s<BR>Cast: %s\", kgtk_lqstring_text(n1_label), \n",
-    "                   count(distinct award), group_concat(distinct kgtk_lqstring_text(award_label)), \n",
-    "                   group_concat(distinct kgtk_lqstring_text(actor_label))) as tooltip'\n",
+    "                   count(distinct award), \n",
+    "                   replace(group_concat(distinct kgtk_lqstring_text(award_label)), \",\", \", \"), \n",
+    "                   replace(group_concat(distinct kgtk_lqstring_text(actor_label)), \",\", \", \")) as tooltip'\n",
     "         -o $TEMP/movies.node.file.4.tsv\n",
     "\"\"\")"
    ]
@@ -2508,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2525,15 +2532,15 @@
     "        --tooltip-column tooltip\n",
     "        --show-text above\n",
     "        --node-size-column award_count\n",
-    "        --node-size-scale log\n",
-    "        --node-size-minimum 5\n",
-    "        --node-size-maximum 10\n",
+    "        --node-size-scale linear\n",
+    "        --node-size-minimum 1\n",
+    "        --node-size-maximum 20\n",
     "        -o $OUT/movies.common_actors.awards.html\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2556,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2571,7 +2578,7 @@
     "                   max(distinct(kgtk_date_year(publication_date))) as publication_year,\n",
     "                   printf(\"%s (%s)<BR>Publication Year: %s<BR>Box Office: %s\", kgtk_lqstring_text(n1_label), n1,\n",
     "                   max(distinct(kgtk_date_year(publication_date))),\n",
-    "                   max(kgtk_quantity_number(box_office))) as tooltip'\n",
+    "                   printf(\"$%,d\", max(kgtk_quantity_number(box_office)))) as tooltip'\n",
     "         -o $TEMP/movies.node.file.5.tsv\n",
     "\"\"\")"
    ]
@@ -2592,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2605,13 +2612,13 @@
     "        --edge-color-default '#888888'\n",
     "        --edge-width-scale linear\n",
     "        --node-color-column publication_year\n",
-    "        --node-color-style rainbow\n",
+    "        --node-color-style gradient\n",
     "        --tooltip-column tooltip\n",
     "        --show-text above\n",
     "        --node-size-column bo_collection\n",
-    "        --node-size-scale log\n",
-    "        --node-size-minimum 5\n",
-    "        --node-size-maximum 10\n",
+    "        --node-size-scale linear\n",
+    "        --node-size-minimum 1\n",
+    "        --node-size-maximum 20\n",
     "        -o $OUT/movies.common_actors.year.box_office.html\"\"\")"
    ]
   },
@@ -2624,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
