add more description

--- a/tutorial/06-kg-network-analysis.ipynb
+++ b/tutorial/06-kg-network-analysis.ipynb
@@ -1737,7 +1737,9 @@
     "\n",
     "`P162`: cast\n",
     "\n",
-    "`P31`: instance of"
+    "`P31`: instance of\n",
+    "\n",
+    "Build a graph of movies with common actors. Add ids and labels to the KGTK edge file."
    ]
   },
   {
@@ -1957,6 +1959,13 @@
    ],
    "source": [
     "kgtk(\"\"\"head -i $TEMP/movies.common_actors.tsv.gz\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Count the number of common actors a pair of movies have and store the count in a separate column"
    ]
   },
   {
@@ -2212,6 +2221,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following kypher query create a node file to be used as an input to the `kgtk visualize-graph` command.\n",
+    "\n",
+    "Finds the genre and actors for a movie, concatenating multiple genres and actors to a comma separated string."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -2346,6 +2364,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following kypher query create a node file to be used as an input to the `kgtk visualize-graph` command.\n",
+    "\n",
+    "Finds the genre and actors for a movie, concatenating multiple genres and actors to a comma separated string."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -2474,6 +2501,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following kypher query create a node file to be used as an input to the `kgtk visualize-graph` command.\n",
+    "\n",
+    "Finds the awards and actors for a movie, concatenating multiple awards and actors to comma separated strings. Also stores the award count."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
@@ -2559,6 +2595,15 @@
    "metadata": {},
    "source": [
     "#### Visualize Movies according to Publication Date and Box Office Collections"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following kypher query create a node file to be used as an input to the `kgtk visualize-graph` command.\n",
+    "\n",
+    "Finds the publication year and box office collections for a movie, in case of multiple entries, keep the most recent one."
    ]
   },
   {
