--- a/tutorial/06-kg-network-analysis.ipynb
+++ b/tutorial/06-kg-network-analysis.ipynb
@@ -128,24 +128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\n",
-      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
       "EXAMPLES_DIR: /Users/amandeep/Github/kgtk-notebooks/examples\n",
+      "kgtk: kgtk\n",
+      "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\n",
+      "GRAPH: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input\n",
+      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "kypher: kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
+      "OUT: /tmp/projects/tutorial-network-analysis\n",
       "STORE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
       "KGTK_OPTION_DEBUG: false\n",
-      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
-      "GRAPH: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input\n",
-      "kgtk: kgtk\n",
-      "OUT: /tmp/projects/tutorial-network-analysis\n",
       "TEMP: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis\n",
-      "kypher: kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
       "label: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\n",
       "item: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.wikibase-item.tsv.gz\n",
       "time: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.time.tsv.gz\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,8 +178,8 @@
       "P10\tlabel\t'video'@en\tP10-label-en\n",
       "P1000\tlabel\t'record held'@en\tP1000-label-en\n",
       "P1001\tlabel\t'applies to jurisdiction'@en\tP1001-label-en\n",
-      "CPU times: user 5.83 ms, sys: 11.9 ms, total: 17.7 ms\n",
-      "Wall time: 4.92 s\n"
+      "CPU times: user 2.73 ms, sys: 8.11 ms, total: 10.8 ms\n",
+      "Wall time: 1.27 s\n"
      ]
     }
    ],
@@ -202,15 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.73 ms, sys: 12.2 ms, total: 18.9 ms\n",
-      "Wall time: 11.4 s\n"
+      "CPU times: user 6.98 ms, sys: 12 ms, total: 19 ms\n",
+      "Wall time: 11 s\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "9  Q18608871           Pindegree   0.000000           Q18608871-Pindegree-9"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,15 +381,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 79 ms, sys: 24.4 ms, total: 103 ms\n",
-      "Wall time: 4.94 s\n"
+      "CPU times: user 72.6 ms, sys: 22.6 ms, total: 95.2 ms\n",
+      "Wall time: 5.98 s\n"
      ]
     },
     {
@@ -507,7 +507,7 @@
        "[13871 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,15 +557,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.51 ms, sys: 11.5 ms, total: 18 ms\n",
-      "Wall time: 3.8 s\n"
+      "CPU times: user 7.16 ms, sys: 11.1 ms, total: 18.2 ms\n",
+      "Wall time: 3.7 s\n"
      ]
     },
     {
@@ -720,7 +720,7 @@
        "[72 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,15 +746,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.82 ms, sys: 10.8 ms, total: 14.6 ms\n",
-      "Wall time: 2.17 s\n"
+      "CPU times: user 4.08 ms, sys: 10.1 ms, total: 14.2 ms\n",
+      "Wall time: 2.29 s\n"
      ]
     }
    ],
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "[494 rows x 6 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,15 +973,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.55 ms, sys: 19.5 ms, total: 28.1 ms\n",
-      "Wall time: 4.29 s\n"
+      "CPU times: user 8.32 ms, sys: 18.5 ms, total: 26.9 ms\n",
+      "Wall time: 4.19 s\n"
      ]
     },
     {
@@ -1100,7 +1100,7 @@
        "9  Q1086823    P40  Q76363382    Q1086823-P40-Q76363382"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
        "3  'Meinhard Schwarzenegger'@en  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
        "12            'sibling'@en   'Meinhard Schwarzenegger'@en  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -1715,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
        "9               'Bite the Bullet'@en  'Gene Hackman'@en  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2172,7 +2172,7 @@
        "9  'The Conversation'@en                        'Hawaii'@en  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2311,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2326,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2339,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2352,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2374,7 +2374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2432,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2448,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2463,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2476,7 +2476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2551,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2576,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2608,7 +2608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2644,7 +2644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2657,7 +2657,7 @@
     "        --edge-color-default '#888888'\n",
     "        --edge-width-scale linear\n",
     "        --node-color-column publication_year\n",
-    "        --node-color-style gradient\n",
+    "        --node-color-numbers\n",
     "        --tooltip-column tooltip\n",
     "        --show-text above\n",
     "        --node-size-column bo_collection\n",
@@ -2676,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
