pass graph cache

--- a/use-cases/class-visualization.ipynb
+++ b/use-cases/class-visualization.ipynb
@@ -59,6 +59,8 @@
     "output_path = \"/data/amandeep/wikidata-20211027-dwd-v3\"\n",
     "project_name = \"class-visualization\"\n",
     "\n",
+    "graph_cache_path = None\n",
+    "\n",
     "files = \"p279,p279star,label\"\n",
     "files_for_cache = None\n",
     "debug = False"
@@ -97,6 +99,7 @@
     "ck.configure_kgtk(input_graph_path=input_path,\n",
     "                  output_path=output_path,\n",
     "                  project_name=project_name,\n",
+    "                  graph_cache_path=graph_cache_path,\n",
     "                  debug=True\n",
     "                 )"
    ]
