--- a/use-cases/properties-for-this-type.ipynb
+++ b/use-cases/properties-for-this-type.ipynb
@@ -246,6 +246,7 @@
     "ck.configure_kgtk(input_graph_path=input_path,\n",
     "                  output_path=output_path,\n",
     "                  project_name=project_name,\n",
+    "                  graph_cache_path=graph_cache_path,\n",
     "                  debug=True)"
    ]
   },
