--- a/use-cases/class-visualization.ipynb
+++ b/use-cases/class-visualization.ipynb
@@ -1024,7 +1024,7 @@
    "outputs": [],
    "source": [
     "kgtk(\"\"\"\n",
-    "    query -i label -i $TEMP/statistics.Pinstance_count.tsv.gz -i graphbrowser -i browsernodes\n",
+    "    query -i label -i $GRAPH/statistics.Pinstance_count.tsv.gz -i graphbrowser -i browsernodes\n",
     "        --match '\n",
     "            graphbrowser: (c)-[{graph: graph}]->(),\n",
     "            browsernodes: (c)-[{node_type: nt}]->()'\n",
@@ -1063,7 +1063,7 @@
    "outputs": [],
    "source": [
     "kgtk(\"\"\"\n",
-    "    query -i label -i $TEMP/statistics.Pinstance_count.tsv.gz -i graphbrowser -i browsernodes\n",
+    "    query -i label -i $GRAPH/statistics.Pinstance_count.tsv.gz -i graphbrowser -i browsernodes\n",
     "        --match '\n",
     "            graphbrowser: ()-[{graph: graph}]->(c),\n",
     "            browsernodes: (c)-[{node_type: nt}]->()'\n",
