--- a/use-cases/create_wikidata/Wikidata-Subsets.ipynb
+++ b/use-cases/create_wikidata/Wikidata-Subsets.ipynb
@@ -833,7 +833,7 @@
    "outputs": [],
    "source": [
     "pm.execute_notebook(\n",
-    "    os.environ[\"EXAMPLES_DIR\"] + \"/partition-wikidata.ipynb\",\n",
+    "    \"partition-wikidata.ipynb\",\n",
     "    os.environ[\"TEMP\"] + \"/partition-wikidata.out.ipynb\",\n",
     "    parameters=dict(\n",
     "        wikidata_input_path = os.environ[\"OUT\"] + \"/all.tsv.gz\",\n",
@@ -876,7 +876,7 @@
    "outputs": [],
    "source": [
     "pm.execute_notebook(\n",
-    "    f'{os.environ[\"USE_CASES_DIR\"]}/{useful_files_notebook}',\n",
+    "    f'{useful_files_notebook}',\n",
     "    os.environ[\"TEMP\"] + \"/Wikidata-Useful-Files-Out.ipynb\",\n",
     "    parameters=dict(\n",
     "        output_path = os.environ[\"OUT\"],\n",
