--- a/use-cases/create_wikidata/create-wikidata-dwd.ipynb
+++ b/use-cases/create_wikidata/create-wikidata-dwd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "93f651b9-d27d-40bb-b531-cfabad740521",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 61 µs, sys: 26 µs, total: 87 µs\n",
-      "Wall time: 108 µs\n"
+      "CPU times: user 829 ms, sys: 181 ms, total: 1.01 s\n",
+      "Wall time: 784 ms\n"
      ]
     }
    ],
@@ -53,8 +53,7 @@
     "output_path = \"/data/amandeep\"\n",
     "project_name = \"create-wikidata-dwd\"\n",
     "\n",
-    "kgtk_path = \"/data/amandeep/Github/kgtk\"\n",
-    "kgtk_notebooks_path = \"/data/amandeep/Github/kgtk-notebooks\"\n",
+    "kgtk_path= \"/data/amandeep/Github/kgtk\"\n",
     "kgtk_browser_path = \"/data/amandeep/Github/kgtk-browser\"\n",
     "kernel_name = \"kgtk-env-ckg07\"\n",
     "wikipedia_short_abstracts_path = '/data/amandeep/downloaded.wikipedia.short_abstracts.tsv.gz'"
@@ -62,21 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b1c90cb1-baab-4387-bad5-62d703d84ec1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User home: /nas/home/amandeep\n",
-      "Current dir: /data/amandeep/Github/kgtk/use-cases\n",
-      "KGTK dir: /data/amandeep/Github/kgtk\n",
-      "Use-cases dir: /data/amandeep/Github/kgtk/use-cases\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "ck = ConfigureKGTK([], kgtk_path=kgtk_path)\n",
@@ -84,6 +72,38 @@
     "                  output_path=output_path,\n",
     "                  project_name=project_name,\n",
     "                 graph_cache_path=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "69124bdd-c899-4098-89b5-a5dbcb02e63c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GRAPH: /data/amandeep\n",
+      "KGTK_OPTION_DEBUG: false\n",
+      "USE_CASES_DIR: /data/amandeep/Github/kgtk/use-cases\n",
+      "EXAMPLES_DIR: /data/amandeep/Github/kgtk/examples\n",
+      "KGTK_LABEL_FILE: /data/amandeep/labels.en.tsv.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "ck.print_env_variables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8de41352-e107-48ae-b572-2e3c2c12f61c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/usc-isi-i2/kgtk-browser $OUT/kgtk-browser"
    ]
   },
   {
@@ -209,7 +229,7 @@
    "source": [
     "The following notebook will run the following notebooks ,\n",
     "\n",
-    "1. `../examples/partition-wikidata.ipynb`\n",
+    "1. `./partition-wikidata.ipynb`\n",
     "The output will be at the path (example accoding to the parameters specified in the below cell) ,\n",
     "`/data/amandeep/wikidata-20220519-dwd-v5/parts`\n",
     "\n",
@@ -420,7 +440,7 @@
    "source": [
     "%%time\n",
     "pm.execute_notebook(\n",
-    "    f\"{kgtk_notebooks_path}/use-cases/properties-for-this-type.ipynb\",\n",
+    "    \"properties-for-this-type.ipynb\",\n",
     "    os.environ[\"TEMP\"] + \"/properties-for-this-type.out.ipynb\",\n",
     "    kernel_name=kernel_name,\n",
     "    parameters=dict(\n",
@@ -489,7 +509,7 @@
    "source": [
     "%%time\n",
     "pm.execute_notebook(\n",
-    "    f\"{kgtk_notebooks_path}/use-cases/class-visualization.ipynb\",\n",
+    "    \"class-visualization.ipynb\",\n",
     "    os.environ[\"TEMP\"] + \"/class-visualization.out.ipynb\",\n",
     "    kernel_name=kernel_name,\n",
     "    parameters=dict(\n",
@@ -553,7 +573,7 @@
    "source": [
     "%%time\n",
     "pm.execute_notebook(\n",
-    "    f\"{kgtk_browser_path}/Create-claims-augmented-for-browser.ipynb\",\n",
+    "    \"Create-claims-augmented-for-browser.ipynb\",\n",
     "    os.environ[\"TEMP\"] + \"/Create-claims-augmented-for-browser.out.ipynb\",\n",
     "    kernel_name=kernel_name,\n",
     "    parameters=dict(\n",
@@ -606,7 +626,7 @@
    "source": [
     "%%time\n",
     "pm.execute_notebook(\n",
-    "    f\"{kgtk_browser_path}/KGTK-Query-Text-Search-Setup.ipynb\",\n",
+    "    f\"{os.environ['OUT']}/kgtk-browser/KGTK-Query-Text-Search-Setup.ipynb\",\n",
     "    os.environ[\"TEMP\"] + \"/KGTK-Query-Text-Search-Setup.ipynb\",\n",
     "    kernel_name=kernel_name,\n",
     "    parameters=dict(\n",
